[package]
name = "xkpass"
version = "0.1.0"
authors = ["Durbek Kamolov <k2.durbek@gmail.com>"]
repository = "https://github.com/DurbeKK/xkpass"
license = "MIT OR Apache-2.0"
description = "Generate passwords that are easy to remember. Inspired by https://xkcd.com/936/"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive", "wrap_help"] }
rand = "0.8.5"
